package tn.iteam.Enums;

public enum RoleName {
    SUPERADMIN,
    ADMIN,
    SUPPORT,
    VIEWER
}